[package]
name = "lib-voxels-directories"
version = "0.1.0"
edition = "2024"
authors = ["Jacob Evans"]
description = "Rust language constructs for representing and locating shared directories used by applications in the voxels game ecosystem."
readme = "../README.md"
homepage = "oxynlabs.dev"

[dependencies]
lib-voxels-application = {git="https://github.com/Oxyn4/lib-voxels-application"}
mockall = "0.13.1"
nix = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
url = { version = "2.5.4", features = ["serde"]}
